--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextn",
-  "version": "0.1.0",
+  "name": "lockme",
+  "version": "1.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
@@ -43,10 +43,10 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.7.0",
     "genkit": "^1.8.0",
+    "lightgallery": "^2.8.3",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "next-themes": "^0.3.0",
-    "nodemailer": "^7.0.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,7 +59,6 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.8.0",
