--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "lockme",
-  "version": "1.5.0",
+  "name": "lockme-website",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev --turbopack -p 9060",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
